# cpp-channel

./: CMakeLists.txt  Channel.hpp  LICENSE  README.md  main.cpp
examples/: main.cpp
include/: Channel.hpp  RingBuffer.hpp
test/: test.cpp  test_ringbuffer.cpp
